# auv-rl-gazebo

./: .gitattributes  CMakeLists.txt  package.xml
launch/: auv_rl_env.launch  cage.launch  cage_gt_tf.launch  fiducial_gt_tf.launch  fiducial_to_docking_tf.launch
media/heightmaps/: seabed_heightmap.xcf
media/materials/scripts/: sand.material
models/auv_rl_cage/: model.config  model.sdf
models/auv_rl_cage/3D/: cage.blend
models/auv_rl_cage/meshes/: cage.dae
models/auv_rl_fiducials/: create.sh
models/auv_rl_fiducials/april_tag_00/: model.config  model.sdf
models/auv_rl_fiducials/april_tag_01/: model.config  model.sdf
models/auv_rl_fiducials/april_tag_02/: model.config  model.sdf
models/auv_rl_fiducials/april_tag_03/: model.config  model.sdf
models/auv_rl_fiducials/april_tag_04/: model.config  model.sdf
models/auv_rl_fiducials/april_tag_05/: model.config  model.sdf
models/auv_rl_fiducials/april_tag_06/: model.config  model.sdf
models/auv_rl_fiducials/april_tag_07/: model.config  model.sdf
models/auv_rl_fiducials/april_tag_08/: model.config  model.sdf
models/auv_rl_fiducials/april_tag_09/: model.config  model.sdf
models/auv_rl_fiducials/april_tag_10/: model.config  model.sdf
models/auv_rl_fiducials/april_tag_11/: model.config  model.sdf
models/auv_rl_fiducials/april_tag_12/: model.config  model.sdf
models/auv_rl_ocean/: model.config  model.sdf
models/auv_rl_seabed/: model.config  model.sdf
models/cage/: model.config  model.sdf
models/frame/: model.config  model.sdf
scripts/: seabed_gen.py
worlds/: auv_cage.world  auv_rl.world
(+59 files in other folders)
