<?xml version="1.0"?>
<package format="2">
  <name>auv_rl_gazebo</name>
  <version>0.6.13</version>
  <description>The auv_rl_gazebo package</description>

  <maintainer email="contamatheusnascimento@gmail.com">Matheus do Nascimento Santos</maintainer>
  
  <buildtool_depend>catkin</buildtool_depend>

  <license> Apache-2 </license>
  <depend>gazebo_ros</depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}"
                gazebo_model_path="${prefix}/models"/>
  </export>
</package>
